add placeholder text

--- a/index.html
+++ b/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Gym4U</title>
 </head>
+<header>
+    <p>Logo and website menu</p>
+</header>
 <body>
-    
+    <section>
+        <p>About Gym4u</p>
+        <p>What we offer?</p>
+    </section>
+    <section>
+        <p>Classes weekly schedule</p>
+    </section>
+    <section>
+        <p>Location, Contact details, Opening times</p>
+    </section>
+<footer>
+    <p>Copyright, Social media</p>
+</footer>
+
 </body>
 </html>
