--- a/index.html
+++ b/index.html
@@ -8,7 +8,31 @@
     <title>Gym4U</title>
 </head>
 <header>
-    <p>Logo and website menu</p>
+    <a href="index.html">
+        <h1 id="logo">Gym4U</h1>
+      </a>
+        <nav>
+          <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="#about">About</a>
+            </li>
+            <li>
+                <a href="#classes">Classes</a>
+            </li>
+            <li>
+                <a href="gallery.html">Gallery</a>
+            </li>
+            <li>
+                <a href="sign-up.html">Sign Up</a>
+            </li>
+            <li>
+                <a href="#contact">Contact</a>
+            </li>
+          </ul>
+        </nav>  
 </header>
 <body>
     <section>
