add about section and corresponding css styles

--- a/index.html
+++ b/index.html
@@ -36,8 +36,27 @@
 </header>
 <body>
     <section>
-        <p>About Gym4u</p>
-        <p>What we offer?</p>
+        <div id="about-backgound-image"></div>
+           
+        <div id="about-cover-text">
+            <!--Content borrowed and adapted form RippedGym website home page https://www.rippedgymharlow.co.uk/-->
+            <h2 id="about">About Gym4U</h2>
+            <p>
+            Gym4U is an independent local gym situated in Suffon Walden. Gym4U was established back in 2002 as a strength training facility with a floor space of 16,000 Sq ft and equipped with state of the art machinery. Come inside and you will find an extensive range of Hammer Strength and Cybex machinery alongside cardio equipment, a large free weights area and a bunch of friendly staff!
+            It's your local gym of choice for amateur and pro athletes alike. Come in and find out today! Body Active Gym caters for all individuals if your into your fitness & well being or if your into your strength training. We specialise fitness training, weight loss, body conditioning, strength training, core training, TRX training, kettle bell conditioning, fit boxing ladies only, junior boxing & adult boxing.
+            </p>
+        </div>
+        <div id="offer-cover-text">
+            <!--Content borrowed from BodyActiveGym home page http://www.bodyactivegym.co.uk/-->
+            <h2>What do we offer?</h2>
+            <p>
+            • Nutrition advice • Nutrition planing • Training programmes • Plate loaded & pin selected equipment • Full range of CV equipment
+
+            • Dance Studio • UK supplements shop • Supplement juice bar • Healthy food bar • Chill out area  • Showers & Changing Rooms
+            
+            • Free Parking
+            </p>
+        </div>
     </section>
     <section>
         <p>Classes weekly schedule</p>
