add classes section and tile css styling

--- a/index.html
+++ b/index.html
@@ -58,9 +58,85 @@
             </p>
         </div>
     </section>
-    <section>
-        <p>Classes weekly schedule</p>
+        <div id="classes-header">
+            <h1 id="classes-heading">Classes</h1>
+        </div>
+    <section id="classes-schedule">
+        
+          <!--Class names borrowed from Puregym website https://www.puregym.com/gyms/harlow/timetable/-->
+  
+          <div>
+            <h2>Monday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Tuesday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Wednesday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Thursday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Friday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Saturday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <div>
+            <h2>Sunday</h2>
+            <h3>Cycle</h3>
+            <h3>9:30 (30 mins)</h3>
+            <h3>Bodytone</h3>
+            <h3>12:30 (30 mins)</h3>
+            <h3>Pump</h3>
+            <h3>19:00 (30 mins</h3>
+          </div>
+          <!--Cycle
+          Bodytone
+          Pump
+          Absolute ABS
+          Legs, Bums & Tums
+          Burn it
+          Heat-->
     </section>
+        
     <section>
         <p>Location, Contact details, Opening times</p>
     </section>
