--- a/index.html
+++ b/index.html
@@ -137,9 +137,59 @@
           Heat-->
     </section>
         
-    <section>
-        <p>Location, Contact details, Opening times</p>
-    </section>
+      <div id="classes-header">
+        <h1 id="classes-heading"></i> Contact Us</h1>
+      </div>
+  
+      <section id="contact-details">
+          <div>
+            <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2454.84370799664!2d0.23946911593947492!3d52.02794488032973!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47d8627daea6b189%3A0xbeaa79d42761538f!2s12%20Lime%20Ave%2C%20Saffron%20Walden!5e0!3m2!1sen!2suk!4v1623018346750!5m2!1sen!2suk"></iframe>">
+            </iframe>
+          </div>
+          <div>
+            <h2><i class="fas fa-map-marked-alt"></i> Location</h2>
+              <ul>
+                <li>12 Lyme Avenue</li>
+                <li>Suffron Walden</li>
+                <li>CB10 2DU</li>
+              </ul>
+          </div>
+          <div>
+            <h2 id="contact"><i class="fas fa-address-book"></i> Contact</h2>
+            <table>
+              <tr>
+                <td>telephone</td>
+                <td>07955937235</td>
+              </tr>
+                <td>email</td>
+                <td><a href="mailto:info@Gym4U.com">info@Gym4U.com</a></td>
+            </table>
+          </div>
+          <div>
+            <h2><i class="fas fa-clock"></i> Opening Times</h2>
+            <table>
+              <tr>
+                <td>Monday-Friday</td>
+                <td>05:30-22:00</td>
+              </tr>
+              <tr>
+                <td>Saturday</td>
+                <td>07:30-07:00</td>
+              </tr>
+              <tr>
+                <td>Sunday</td>
+                <td>08:00-18:00</td>
+              </tr>
+              <tr>
+                <td>Bank Holidays</td>
+                <td>08:00-16:00</td>
+              </tr>
+            </table>
+            <br>             
+            <p>Open everyday of the year including Christmas Day!</p>
+          </div>
+      </section>
+    
 <footer>
     <p>Copyright, Social media</p>
 </footer>
