add footer and menu to all pages

--- a/gallery.html
+++ b/gallery.html
@@ -4,9 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <title>Gym4U Gallery</title>
 </head>
 <body>
+    <header>
+        <a href="index.html">
+            <h1 id="logo">Gym4U</h1>
+          </a>
+            <nav>
+              <ul>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                <li>
+                    <a href="#about">About</a>
+                </li>
+                <li>
+                    <a href="#classes">Classes</a>
+                </li>
+                <li>
+                    <a href="gallery.html">Gallery</a>
+                </li>
+                <li>
+                    <a href="sign-up.html">Sign Up</a>
+                </li>
+                <li>
+                    <a href="#contact">Contact</a>
+                </li>
+              </ul>
+            </nav>  
+    </header>
+
+
     
+    <footer>
+        <div>
+          <h2>Copyright © Gym4U 2021</h2>
+        </div>      
+        <div class="float-right" id="icons-container">
+          <ul>
+		          <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fab fa-facebook-square"></i></a></li>
+		          <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fab fa-instagram-square"></i></a></li>
+		          <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><i class="fab fa-twitter-square"></i></a></li>
+          </ul>
+        </div>
+        <div class="float-right">
+          <h2>Find us on:</h2>
+        </div>       
+    </footer>
 </body>
 </html>
