--- a/index.html
+++ b/index.html
@@ -190,9 +190,21 @@
           </div>
       </section>
     
-<footer>
-    <p>Copyright, Social media</p>
-</footer>
+      <footer>
+        <div>
+          <h2>Copyright © Gym4U 2021</h2>
+        </div>      
+        <div class="float-right" id="icons-container">
+          <ul>
+		          <li><a href="https://www.facebook.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fab fa-facebook-square"></i></a></li>
+		          <li><a href="https://www.instagram.com" target="_blank" rel="noopener" aria-label="Find us on Instagram (link opens in a new tab)"><i class="fab fa-instagram-square"></i></a></li>
+		          <li><a href="https://www.twitter.com" target="_blank" rel="noopener" aria-label="Find us on Twitter (link opens in a new tab)"><i class="fab fa-twitter-square"></i></a></li>
+          </ul>
+        </div>
+        <div class="float-right">
+          <h2>Find us on:</h2>
+        </div>       
+    </footer>
 
 </body>
 </html>
