--- a/gallery.html
+++ b/gallery.html
@@ -1,44 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
     <title>Gym4U Gallery</title>
-</head>
-<body>
-    <header>
-        <a href="index.html">
-            <h1 id="logo">Gym4U</h1>
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
+  </head>
+
+    <body>
+
+      <header>
+          <a href="index.html">
+            <img src="assets/img/gym4u_logo.png" id="logo_small" alt="Gym4U large logo">
           </a>
-            <nav>
-              <ul>
-                <li>
-                    <a href="index.html">Home</a>
-                </li>
-                <li>
-                    <a href="#about">About</a>
-                </li>
-                <li>
-                    <a href="#classes">Classes</a>
-                </li>
-                <li>
-                    <a href="gallery.html">Gallery</a>
-                </li>
-                <li>
-                    <a href="sign-up.html">Sign Up</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-              </ul>
-            </nav>  
-    </header>
+        <nav>
+          <ul>
+            <li>
+                <a href="index.html">Home</a>
+            </li>
+            <li>
+                <a href="index.html#about">About</a>
+            </li>
+            <li>
+                <a href="index.html#classes">Classes</a>
+            </li>
+            <li>
+                <a href="gallery.html" class="active">Gallery</a>
+            </li>
+            <li>
+              <a href="index.html#contact">Contact</a>
+            </li>
+            <li>
+              <a href="sign-up.html">Sign In / Sign up</a>
+            </li>
+          </ul>
+        </nav>      
+      </header>
 
+        <section id="photo">
+            <img src="assets/img/weights_area.jpg" alt="weights area">
+            <img src="assets/img/treadmil_area.jpg" alt ="treadmil area">
+            <img src="assets/img/cycle-area.jpg" alt="cycle machines area">
+            <img src="assets/img/exercise-machines.jpg" alt="exercise machines">
+            <img src="assets/img/exercise1.jpg" alt="gym member exercisin with weights">
+            <img src="assets/img/man_lifting.jpg" alt="man lifting a barbell">
+            <img src="assets/img/exercise2.jpg" alt="gym member using exercise machine">
+            <img src="assets/img/exercise3.jpg" alt="gym member using battle ropes">
+            <img src="assets/img/classes1.jpg" alt="legs, bums & tums class">
+            <img src="assets/img/healthy_food.jpg" alt="healthy meals">
+            <img src="assets/img/classes2.jpg" alt="crossfit class">
+            <img src="assets/img/classes3.jpg" alt="burn it class">
+            <img src="assets/img/juice_bar.jpg" alt="juice bar">    
+        </section>
 
-    
-    <footer>
+      <footer>
         <div>
           <h2>Copyright © Gym4U 2021</h2>
         </div>      
@@ -51,7 +68,9 @@
         </div>
         <div class="float-right">
           <h2>Find us on:</h2>
-        </div>       
-    </footer>
-</body>
+        </div> 
+      </footer>
+
+    </body>
+
 </html>
